--- a/sample_config.yaml
+++ b/sample_config.yaml
@@ -6,11 +6,12 @@ batch_size: 4
 test_batch_size: 100
 learning_rate: 0.0005
 weight_decay: 0.00001
-num_epochs: 2
+num_episodes: 100000
 
 # Cross validation
 train_size: 0.7
 val_size: 0.2
+eval_steps: 20
 
 # Environment configuration
 data_dir: "/Users/Tim/data/tcga_luad/gdc_download_20181013_213421.982108"
