Use subset of val set during training

--- a/sample_config.yaml
+++ b/sample_config.yaml
@@ -3,7 +3,7 @@ exp_name: "test_exp"
 # Hyperparameters
 model_name: "test_cae"
 batch_size: 4
-test_batch_size: 100
+eval_batch_size: 100
 learning_rate: 0.0005
 weight_decay: 0.00001
 num_episodes: 100000
@@ -11,6 +11,7 @@ rotation_angle: 5    # Angle for data augmentation.
 input_size: 128
 
 eval_steps: 20
+num_eval_samples: 1000
 
 # Environment configuration
 data_dir: "/Users/Tim/data/tcga_luad/gdc_download_20181013_213421.982108"
