Add custom loss function

--- a/sample_config.yaml
+++ b/sample_config.yaml
@@ -2,6 +2,8 @@ exp_name: "test_exp"
 
 # Hyperparameters
 model_name: "test_cae"
+model_args:
+  loss_name: "mse" # mse, inter_class_mse
 batch_size: 4
 eval_batch_size: 100
 learning_rate: 0.0005
